--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div class="box">
                 <div class="text box1">
 
-                    <span>Sobre Nós</span>
+                    <span><a href="sobre-nos.html">Sobre nós </a> </span>
                 </div>
                 <div class="text box2">
-                    <span>Perguntas Frequentes</span>
+                    <span> <a href="index.html">Perguntas Frequentes </a></span>
                 </div>
             </div>
 
@@ -43,8 +43,18 @@
             <span class="text"><a href="index.html">Portfólio</a></span>
         </navbar>
 
+        <div class="container2">
+            <div class="box3 text">
+                <span>sspiralhouse@gmail.com</span>
+                <span>Whatsapp: 12345678</span>
+            </div>
 
+ <div class="box4 text">
+                <span>extasiaoculta@gmail.com</span>
+                <span>Whatsapp: 12345678</span>
+            </div>
 
+        </div>
     </footer>
 
 </body>
