--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -11,9 +11,15 @@
 
         <!-- Bootstrap CSS v5.2.1 -->
         <link rel="stylesheet" href="css/style.css">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        />
     </head>
 
-    <body>
+    <body class="background">
         <header>
             <div>
                 <img class="imgcabeçalho" src="/Imagens/Rectangle 11.png" alt="" srcset="">
@@ -23,16 +29,50 @@
             <h1 class="text">Sobre Nós</h1>
             <h4 class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut enim veniam quis vero mollitia, id odit non neque illo magni blanditiis repudiandae velit omnis unde nesciunt ad repellendus reiciendis et? Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nisi voluptate, laudantium perferendis ducimus voluptas fugiat facilis ea impedit omnis obcaecati inventore recusandae nemo suscipit nobis at cumque magnam dicta?</h4>
             <div class="pessoa1">
-                <div class="nome">
+                <div class="container1">
                     <h1 class="text">Livia Maria</h1>
-                <h4 class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nisi quisquam optio natus quod, facere doloremque eaque blanditiis minima ex ut perspiciatis labore provident debitis, itaque, nemo fugit fuga officia.</h4>
+                    <h5 class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas accusantium vitae amet modi quis impedit blanditiis, similique ullam, iste maxime unde? Quasi error quae eveniet dolorem sequi omnis laborum maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa facilis nostrum dolorum minus explicabo odit placeat corporis, ab, dicta id laudantium eius voluptatibus excepturi? Modi corporis rerum explicabo cum ratione.</h5>
+                </div>    
+                    <img src="/Imagens/espiral.jpg" class="fotos" alt="">
+            </div>
+            <div class="pessoa1">
+                <img src="/Imagens/espiral.jpg" class="fotos" alt="">
+                <div class="container1">
+                    <h1 class="text">Gabriel</h1>
+                    <h5 class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic minus nostrum iure nesciunt laborum excepturi, asperiores vel dolorum totam doloribus obcaecati unde illo pariatur mollitia! Sunt enim quis ut saepe. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque architecto voluptatem commodi a quia recusandae, eveniet, et impedit tempore provident nostrum perspiciatis optio, est laudantium. Perferendis consequuntur accusamus molestias asperiores!</h5>
                 </div>
-                <img class="fotos" src="/Imagens/espiral.jpg" alt="">
+            </div>
+            <div class="pessoa1">
+                <div class="container1">
+                    <h1 class="text">Livia Maria</h1>
+                    <h5 class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas accusantium vitae amet modi quis impedit blanditiis, similique ullam, iste maxime unde? Quasi error quae eveniet dolorem sequi omnis laborum maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa facilis nostrum dolorum minus explicabo odit placeat corporis, ab, dicta id laudantium eius voluptatibus excepturi? Modi corporis rerum explicabo cum ratione.</h5>
+                </div>    
+                    <img src="/Imagens/espiral.jpg" class="fotos" alt="">
             </div>
         </main>
         <footer>
             <!-- place footer here -->
+             <footer>
+        <navbar class="rodapé">
+            <span class="text"><a href="index.html">Home</a></span>
+            <span class="text"><a href="index.html">Extasia Oculta</a></span>
+            <span class="text"><a href="index.html">Agenda</a></span>
+            <span class="text"><a href="index.html">Portfólio</a></span>
+        </navbar>
 
+        <div class="container2">
+            <div class="box3 text">
+                <span>sspiralhouse@gmail.com</span>
+                <span>Whatsapp: 12345678</span>
+            </div>
+
+ <div class="box4 text">
+                <span>extasiaoculta@gmail.com</span>
+                <span>Whatsapp: 12345678</span>
+            </div>
+
+        </div>
+    </footer>
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script
