--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -1,63 +1,62 @@
 <!doctype html>
-<html lang="en">
-    <head>
-        <title>Sobre Nós</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+<html lang="pt-BR">
 
-        <!-- Bootstrap CSS v5.2.1 -->
-        <link rel="stylesheet" href="css/style.css">
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
-    </head>
+<head>
+    <title>Sobre Nós</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <body class="background">
-        <header>
-            <div>
-                <img class="imgcabeçalho" src="/Imagens/Rectangle 11.png" alt="" srcset="">
-            </div>
-        </header>
-        <main>
-            <h1 class="text">Sobre Nós</h1>
-            <h4 class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut enim veniam quis vero mollitia, id odit non neque illo magni blanditiis repudiandae velit omnis unde nesciunt ad repellendus reiciendis et? Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nisi voluptate, laudantium perferendis ducimus voluptas fugiat facilis ea impedit omnis obcaecati inventore recusandae nemo suscipit nobis at cumque magnam dicta?</h4>
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <header>
+        <div>
+            <img class="imgcabeçalho" src="/Imagens/Rectangle 11 (2).png" alt="" srcset="">
+        </div>
+    </header>
+    <main>
+        <h1 class="text">Sobre Nós</h1>
+        <h3 class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut enim veniam quis vero mollitia,
+            id odit non neque illo magni blanditiis repudiandae velit omnis unde nesciunt ad repellendus reiciendis et?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Error nisi voluptate, laudantium perferendis
+            ducimus voluptas fugiat facilis ea impedit omnis obcaecati inventore recusandae nemo suscipit nobis at
+            cumque magnam dicta?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla quibusdam maiores rem eveniet omnis voluptate? Quas, odit quisquam. Harum corporis mollitia deleniti ullam earum placeat nesciunt, praesentium quae a eveniet.</h3>
+        <div class="container1">
             <div class="pessoa1">
-                <div class="container1">
                     <h1 class="text">Livia Maria</h1>
-                    <h5 class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas accusantium vitae amet modi quis impedit blanditiis, similique ullam, iste maxime unde? Quasi error quae eveniet dolorem sequi omnis laborum maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa facilis nostrum dolorum minus explicabo odit placeat corporis, ab, dicta id laudantium eius voluptatibus excepturi? Modi corporis rerum explicabo cum ratione.</h5>
-                </div>    
-                    <img src="/Imagens/espiral.jpg" class="fotos" alt="">
+                    <h4 class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nisi quisquam optio
+                        natus quod, facere doloremque eaque blanditiis minima ex ut perspiciatis labore provident
+                        debitis, itaque, nemo fugit fuga officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dicta rerum laborum laboriosam, minus eligendi suscipit commodi fugit pariatur unde fuga libero, ut, ullam ipsam? Deleniti modi odio illo sint?</h4>
             </div>
-            <div class="pessoa1">
+                <img class="fotos" src="/Imagens/espiral.jpg" alt="">
+        </div>
+        <div class="container1">
                 <img src="/Imagens/espiral.jpg" class="fotos" alt="">
-                <div class="container1">
-                    <h1 class="text">Gabriel</h1>
-                    <h5 class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic minus nostrum iure nesciunt laborum excepturi, asperiores vel dolorum totam doloribus obcaecati unde illo pariatur mollitia! Sunt enim quis ut saepe. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque architecto voluptatem commodi a quia recusandae, eveniet, et impedit tempore provident nostrum perspiciatis optio, est laudantium. Perferendis consequuntur accusamus molestias asperiores!</h5>
-                </div>
+            <div class="pessoa1">  
+                <h1 class="text">Gabriel</h1>
+                <h4 class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio et vel, itaque nam incidunt aut eius magnam fugiat esse commodi, cupiditate sint. Dolores alias voluptatum aspernatur earum dolorem quod accusantium?Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus numquam quas, magni quae praesentium itaque eveniet voluptas esse eum nulla est quisquam! Eligendi doloremque quidem ut. Impedit blanditiis labore beatae!</h4>
             </div>
+        </div>
+                <div class="container1">
             <div class="pessoa1">
-                <div class="container1">
-                    <h1 class="text">Livia Maria</h1>
-                    <h5 class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas accusantium vitae amet modi quis impedit blanditiis, similique ullam, iste maxime unde? Quasi error quae eveniet dolorem sequi omnis laborum maiores? Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa facilis nostrum dolorum minus explicabo odit placeat corporis, ab, dicta id laudantium eius voluptatibus excepturi? Modi corporis rerum explicabo cum ratione.</h5>
-                </div>    
-                    <img src="/Imagens/espiral.jpg" class="fotos" alt="">
+                    <h1 class="text">Ana Gabriela</h1>
+                    <h4 class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit nisi quisquam optio
+                        natus quod, facere doloremque eaque blanditiis minima ex ut perspiciatis labore provident
+                        debitis, itaque, nemo fugit fuga officia. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos dicta rerum laborum laboriosam, minus eligendi suscipit commodi fugit pariatur unde fuga libero, ut, ullam ipsam? Deleniti modi odio illo sint?</h4>
             </div>
-        </main>
-        <footer>
-            <!-- place footer here -->
-             <footer>
-        <navbar class="rodapé">
+                <img class="fotos" src="/Imagens/espiral.jpg" alt="">
+        </div>
+    </main>
+    <footer>
+        <!-- place footer here -->
+    <navbar class="rodapé">
             <span class="text"><a href="index.html">Home</a></span>
-            <span class="text"><a href="index.html">Extasia Oculta</a></span>
-            <span class="text"><a href="index.html">Agenda</a></span>
-            <span class="text"><a href="index.html">Portfólio</a></span>
+            <span class="text"><a href="extasia.html">Extasia Oculta</a></span>
+            <span class="text"><a href="agenda.html">Agenda</a></span>
+            <span class="text"><a href="portfolio.html">Portfólio</a></span>
         </navbar>
 
         <div class="container2">
@@ -66,25 +65,21 @@
                 <span>Whatsapp: 12345678</span>
             </div>
 
- <div class="box4 text">
+            <div class="box4 text">
                 <span>extasiaoculta@gmail.com</span>
                 <span>Whatsapp: 12345678</span>
             </div>
 
         </div>
     </footer>
-        </footer>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
