--- a/extasia.html
+++ b/extasia.html
@@ -1,11 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Extasia Oculta</title>
+
+    <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-    
+<body class="background">
+    <Header>
+            <img src="/Imagens/cabeçalho extasia.png" class="imgcabeçalho" alt="">
+            <h1>Extasia Oculta</h1>
+    </Header>
+    <main>
+        <!-- primeiro -->
+        <div class="container4">
+            <div class="roupas">
+                <img src="/Imagens/espiral.jpg" alt="">
+                <div class="descrição">
+                        <h3 class="text-extasia">Lorem ipsum dolor sit amet consectetur. Totam dolore nam dolores!</h3>
+                        <div class="preço">
+                            <h2 class="text-extasia">R$999,00</h2>
+                        </div>
+                </div>
+            </div>
+            <div class="roupas">
+                <img src="/Imagens/espiral.jpg" alt=""> 
+                <div class="descrição">
+                    <h3 class="text-extasia">Lorem ipsum dolor sit amet consectetur. Totam dolore nam dolores!</h3>
+                    <div class="preço">
+                        <h2 class="text-extasia">R$999,00</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- segundo -->
+                <div class="container4">
+            <div class="roupas">
+                <img src="/Imagens/espiral.jpg" alt=""> 
+                <div class="descrição">
+                    <h3 class="text-extasia">Lorem ipsum dolor sit amet consectetur. Totam dolore nam dolores!</h3>
+                    <div class="preço">
+                        <h2 class="text-extasia">R$999,00</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="roupas">
+                <img src="/Imagens/espiral.jpg" alt=""> 
+                <div class="descrição">
+                    <h3 class="text-extasia">Lorem ipsum dolor sit amet consectetur. Totam dolore nam dolores!</h3>
+                    <div class="preço">
+                        <h2 class="text-extasia">R$999,00</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- terceiro -->
+                <div class="container4">
+            <div class="roupas">
+                <img src="/Imagens/espiral.jpg" alt=""> 
+                <div class="descrição">
+                    <h3 class="text-extasia">Lorem ipsum dolor sit amet consectetur. Totam dolore nam dolores!</h3>
+                    <div class="preço">
+                        <h2 class="text-extasia">R$999,00</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="roupas">
+                <img src="/Imagens/espiral.jpg" alt=""> 
+                <div class="descrição">
+                    <h3 class="text-extasia">Lorem ipsum dolor sit amet consectetur. Totam dolore nam dolores!</h3>
+                    <div class="preço">
+                        <h2 class="text-extasia">R$999,00</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+    <footer>
+        <navbar class="rodapé">
+            <span class="text-extasia"><a href="index.html">Home</a></span>
+            <span class="text-extasia"><a href="extasia.html">Extasia Oculta</a></span>
+            <span class="text-extasia"><a href="agenda.html">Agenda</a></span>
+            <span class="text-extasia"><a href="portfolio.html">Portfólio</a></span>
+        </navbar>
+
+        <div class="container2">
+            <div class="box3 text">
+                <span class="text-extasia">sspiralhouse@gmail.com</span>
+                <span class="text-extasia">Whatsapp: 12345678</span>
+            </div>
+
+            <div class="box4 text">
+                <span class="text-extasia">extasiaoculta@gmail.com</span>
+                <span class="text-extasia">Whatsapp: 12345678</span>
+            </div>
+
+        </div>
+    </footer>
 </body>
 </html>
