--- a/roupas.html
+++ b/roupas.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Roupas</title>
+
+        <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-    
+<body class="background">
+    <header>
+        <img src="/Imagens/cabeçalho extasia.png" class="imgcabeçalho" alt="">
+        <h1 class="text-extasia">Nome da roupa</h1>
+    </header>
+    <main>
+        
+    </main>
 </body>
 </html>
