--- a/sobre-nos.html
+++ b/sobre-nos.html
@@ -17,7 +17,7 @@
             <img class="imgcabeçalho" src="/Imagens/Rectangle 11 (2).png" alt="" srcset="">
         </div>
     </header>
-    <main>
+    <main class="container4">
         <h1 class="text">Sobre Nós</h1>
         <h3 class="text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aut enim veniam quis vero mollitia,
             id odit non neque illo magni blanditiis repudiandae velit omnis unde nesciunt ad repellendus reiciendis et?
