--- a/extasia.html
+++ b/extasia.html
@@ -78,7 +78,7 @@
         </div>
     </main>
     <footer>
-        <navbar class="rodapé">
+        <navbar class="rodapé text2">
             <span class="text-extasia"><a href="index.html">Home</a></span>
             <span class="text-extasia"><a href="extasia.html">Extasia Oculta</a></span>
             <span class="text-extasia"><a href="agenda.html">Agenda</a></span>
