--- a/perguntas.html
+++ b/perguntas.html
@@ -30,11 +30,11 @@
   </div>
   <div class="item">
     <div class="title">Seção 4</div>
-    <div class="content">Conteúdo da terceira seção.</div>
+    <div class="content">Conteúdo da quarta seção.</div>
   </div>
   <div class="item">
     <div class="title">Seção 5</div>
-    <div class="content">Conteúdo da terceira seção.</div>
+    <div class="content">Conteúdo da quinta seção.</div>
   </div>
 </div>
 
