--- a/extasia.html
+++ b/extasia.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="css/style.css" />
 </head>
 <body class="background">
-    <Header>
+    <header>
             <img src="/Imagens/cabeçalho extasia.png" class="imgcabeçalho" alt="">
             <h1>Extasia Oculta</h1>
-    </Header>
+    </header>
     <main>
         <!-- primeiro -->
         <div class="container4">
